--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "3.2.0",
     "slugify": "^1.3.4"
   },
   "scripts": {
